--- a/res/layout/layout_fragment_detail.xml
+++ b/res/layout/layout_fragment_detail.xml
@@ -14,15 +14,8 @@
         android:id="@+id/vpMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/indicatorTabHome" 
-        android:layout_above="@+id/startAppBanner">
+        android:layout_below="@+id/indicatorTabHome" >
     </android.support.v4.view.ViewPager>
 
-    <com.startapp.android.publish.banner.Banner
-        android:id="@+id/startAppBanner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
