--- a/res/layout/layout_item.xml
+++ b/res/layout/layout_item.xml
@@ -44,7 +44,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp" >
 
-        <com.gamefree.dailyhoroscopes.view.FadeInNetworkImageView
+        <com.appfree.dailyhoroscopes.view.FadeInNetworkImageView
             android:id="@+id/imgItem"
             android:layout_width="match_parent"
             android:layout_height="220dp"
@@ -103,27 +103,9 @@
                 android:textStyle="bold" />
         </RelativeLayout>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/app_color" />
+   
 
-        <RelativeLayout
-            android:id="@+id/btnShare"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/btn_item_selector"
-            android:clickable="true" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/ic_share"
-                android:clickable="false" />
-        </RelativeLayout>
+        
 
         <View
             android:layout_width="1dp"
