--- a/res/values-v19/styles.xml
+++ b/res/values-v19/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -21,11 +21,13 @@
         <item name="android:colorBackground">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
     <style name="Apptheme" parent="@android:style/Theme.Holo.Light">
-        
-    </style>
-    <style name="Edittext" parent="@android:style/Widget.EditText">
-        <item name="android:drawableBottom">@color/app_color</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:clipToPadding">false</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
 </resources>
